cluster/apps/grocy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy-svc
  namespace: grocy
  labels:
    app: grocy
spec:
  selector:
    app: grocy
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
