cluster/apps/grocy/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grocy
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grocy.gato.hermleigh.home`, `grocy.gato`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: grocy
          kind: Service
          port: 80
    - match: Host(`barcode-buddy.gato.hermleigh.home`,`barcode-buddy.gato`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: barcode-buddy
          kind: Service
          port: 80
