cluster/apps/grocy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy
  namespace: grocy
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "cart-variant"
    hajimari.io/appName: "Grocy"
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  rules:
  - host: grocy.gato.hermleigh.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grocy
            port:
              number: 80
  tls:
    - hosts:
      - grocy.gato.hermleigh.home
      secretName: grocy-ingress-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: barcode-buddy
  namespace: grocy
  annotations:
    hajimari.io/enable: "true"
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  rules:
  - host: barcode-buddy.gato.hermleigh.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: barcode-buddy
            port:
              number: 80
  tls:
    - hosts:
      - barcode-buddy.gato.hermleigh.home
      secretName: barcode-buddy-ingress-cert
